--- a/import.css
+++ b/import.css
@@ -124,7 +124,7 @@
 #app-mount .lookFilled-yCfaCM.colorGrey-2iAG-B:hover,
 #app-mount .lookFilled-yCfaCM.colorPrimary-1arORx:hover,
 #app-mount .lookInverted-2mDUMi.colorBrand-21Le_q:hover {
-    background-color: var(--mainColor);
+    background-color: rgb(255, 0, 255);
     -webkit-box-shadow: inset 0 0 0 10000px rgba(225, 0, 255, 0.603);
     -ms-box-shadow: inset 0 0 0 10000px rgba(225, 0, 255, 0.603);
     -moz-box-shadow: inset 0 0 0 10000px rgba(225, 0, 255, 0.603);
